@@ -2,7 +2,7 @@
 //
 // Another simple example inspired by an r-devel mail by Martin Becker
 //
-// Copyright (C) 2009 Dirk Eddelbuettel and GPL'ed 
+// Copyright (C) 2009 - 2010 Dirk Eddelbuettel and Romain Francois 
 
 #include "RInside.h"                    // for the embedded R via RInside
 
@@ -13,15 +13,12 @@ int main(int argc, char *argv[]) {
         SEXP ans;
 
         std::string txt = "myenv <- new.env(hash=TRUE, size=NA)";
-        if (R.parseEvalQ(txt))          // eval string quietly, no result
-            throw std::runtime_error("R cannot evaluate '" + txt + "'");
+        R.parseEvalQ(txt);          	// eval string quietly, no result
 
         txt = "as.integer(is.environment(myenv))";
-        if (R.parseEval(txt, ans))      // eval string, result in ans
-            throw std::runtime_error("R cannot evaluate '" + txt + "'");
-	
-	RcppVector<int> V(ans);   	// convert SEXP variable to an RcppVector
-  
+        ans = R.parseEval(txt);      	// eval string, result in ans
+	Rcpp::LogicalVector V(ans);   	// convert SEXP variable to vector
+
 	std::cout << "We "
 		  << (V(0) ? "do" : "do not")
 		  << " have an environment." << std::endl;
